fix: version-check.shスクリプトに合わせてDockerfileを修正

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
         - UID=${UID-1000}
         - GID=${GID-1000}
     volumes:
-      - './src/:/workdir/src'
-      - './docs/:/workdir/docs'
+      - './src/:/workdir/src/'
+      - './docs/:/workdir/docs/'
     tty: true
     stdin_open: true
